--- a/video_library/video_library/doctype/course_video_mapping/course_video_mapping.json
+++ b/video_library/video_library/doctype/course_video_mapping/course_video_mapping.json
@@ -3,13 +3,13 @@
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
- "autoname": "field:course_name", 
+ "autoname": "field:video_course", 
  "beta": 0, 
- "creation": "2018-08-31 12:54:38.453519", 
+ "creation": "2018-09-04 06:54:32.864150", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
- "document_type": "", 
+ "document_type": "Setup", 
  "editable_grid": 1, 
  "engine": "InnoDB", 
  "fields": [
@@ -19,8 +19,39 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "course_name", 
-   "fieldtype": "Data", 
+   "fieldname": "video_course", 
+   "fieldtype": "Link", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 1, 
+   "in_standard_filter": 0, 
+   "label": "Video Course", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "Video Course", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 1, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "vimeo_video", 
+   "fieldtype": "Table", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -28,9 +59,10 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Course Name", 
+   "label": "Vimeo Video", 
    "length": 0, 
    "no_copy": 0, 
+   "options": "Vimeo Video", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -54,11 +86,11 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-08-31 12:55:05.824480", 
+ "modified": "2018-09-04 06:54:32.864150", 
  "modified_by": "Administrator", 
  "module": "Video Library", 
- "name": "Premium Video Courses", 
- "name_case": "Title Case", 
+ "name": "Course Video Mapping", 
+ "name_case": "", 
  "owner": "Administrator", 
  "permissions": [
   {
@@ -82,7 +114,7 @@
    "write": 1
   }
  ], 
- "quick_entry": 1, 
+ "quick_entry": 0, 
  "read_only": 0, 
  "read_only_onload": 0, 
  "show_name_in_global_search": 0, 
