--- a/video_library/video_library/doctype/user_course_mapping/user_course_mapping.json
+++ b/video_library/video_library/doctype/user_course_mapping/user_course_mapping.json
@@ -3,12 +3,13 @@
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
+ "autoname": "field:user", 
  "beta": 0, 
- "creation": "2018-08-31 12:58:19.836901", 
+ "creation": "2018-09-04 06:52:03.535346", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
- "document_type": "", 
+ "document_type": "Setup", 
  "editable_grid": 1, 
  "engine": "InnoDB", 
  "fields": [
@@ -18,19 +19,19 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "course_name", 
-   "fieldtype": "Link", 
+   "fieldname": "user", 
+   "fieldtype": "Select", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
    "in_global_search": 0, 
-   "in_list_view": 1, 
+   "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Course Name", 
+   "label": "User", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Premium Video Courses", 
+   "options": "\n", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -49,18 +50,19 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "vimeo_url", 
-   "fieldtype": "Code", 
+   "fieldname": "video_course", 
+   "fieldtype": "Table", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
    "in_global_search": 0, 
-   "in_list_view": 1, 
+   "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Vimeo URL", 
+   "label": "Video Course", 
    "length": 0, 
    "no_copy": 0, 
+   "options": "Video Course Detail", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -82,16 +84,37 @@
  "in_create": 0, 
  "is_submittable": 0, 
  "issingle": 0, 
- "istable": 1, 
+ "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-08-31 13:07:43.437429", 
+ "modified": "2018-09-04 09:00:16.840897", 
  "modified_by": "Administrator", 
  "module": "Video Library", 
- "name": "Courses Video Links", 
+ "name": "User Course Mapping", 
  "name_case": "", 
  "owner": "Administrator", 
- "permissions": [], 
- "quick_entry": 1, 
+ "permissions": [
+  {
+   "amend": 0, 
+   "apply_user_permissions": 0, 
+   "cancel": 0, 
+   "create": 1, 
+   "delete": 1, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 0, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "System Manager", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 0, 
+   "write": 1
+  }
+ ], 
+ "quick_entry": 0, 
  "read_only": 0, 
  "read_only_onload": 0, 
  "show_name_in_global_search": 0, 
