--- a/video_library/video_library/doctype/category_course_mapping/category_course_mapping.json
+++ b/video_library/video_library/doctype/category_course_mapping/category_course_mapping.json
@@ -3,9 +3,9 @@
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
- "autoname": "field:video_course", 
+ "autoname": "field:category", 
  "beta": 0, 
- "creation": "2018-09-04 06:54:32.864150", 
+ "creation": "2019-01-21 05:14:27.292182", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
@@ -19,7 +19,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "video_course", 
+   "fieldname": "category", 
    "fieldtype": "Link", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -28,10 +28,10 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Course", 
+   "label": "Category", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Video Course", 
+   "options": "Video Category", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -50,7 +50,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "section_break_4", 
+   "fieldname": "section_break_2", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -79,7 +79,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "video", 
+   "fieldname": "course", 
    "fieldtype": "Table", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -88,10 +88,10 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Video", 
+   "label": "Course", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Course Video Detail", 
+   "options": "Category Course Detail", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -115,10 +115,10 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2019-01-23 07:47:11.440105", 
+ "modified": "2019-01-23 07:46:49.639593", 
  "modified_by": "Administrator", 
  "module": "Video Library", 
- "name": "Course Video Mapping", 
+ "name": "Category Course Mapping", 
  "name_case": "", 
  "owner": "Administrator", 
  "permissions": [
